src/app.scss
@import "tailwindcss/base";
@import "tailwindcss/components";
@import "tailwindcss/utilities";

.slider {
  @apply dark:bg-neutral-900
  [&::-webkit-slider-runnable-track]:rounded-full 
  [&::-webkit-slider-runnable-track]:bg-black/10 
  [&::-webkit-slider-runnable-track]:dark:bg-neutral-700
  [&::-webkit-slider-runnable-track]:shadow-inner
  [&::-webkit-slider-thumb]:appearance-none 
  [&::-webkit-slider-thumb]:h-5 
  [&::-webkit-slider-thumb]:w-5 
  [&::-webkit-slider-thumb]:rounded-full 
  [&::-webkit-slider-thumb]:bg-green-500;
}

code.hljs {
  @apply rounded-md max-h-[42rem] overflow-scroll;
}

@font-face {
  font-family: "Poppins";
  src: url("/fonts/Poppins-ExtraLight.ttf") format("truetype");
  font-weight: 200;
}

@font-face {
  font-family: "Poppins";
  src: url("/fonts/Poppins-Light.ttf") format("truetype");
  font-weight: 300;
}

@font-face {
  font-family: "Poppins";
  src: url("/fonts/Poppins-Regular.ttf") format("truetype");
  font-weight: 400;
}

@font-face {
  font-family: "Poppins";
  src: url("/fonts/Poppins-SemiBold.ttf") format("truetype");
  font-weight: 600;
}

/* Prevent selection on all field elements */
.two-element-container * {
  user-select: none !important;
  -webkit-user-select: none !important;
  -moz-user-select: none !important;
  -ms-user-select: none !important;
}

/* Allow selection only in control areas */
.control-tab *,
.navbar * {
  user-select: auto;
  -webkit-user-select: auto;
  -moz-user-select: auto;
  -ms-user-select: auto;
}

/* Prevent image dragging globally for field images */
img[alt="Field"],
img[alt="Robot"] {
  pointer-events: none !important;
  user-drag: none !important;
  -webkit-user-drag: none !important;
}

